Fix listPublicServices route conflict and add field mapping
- Changed route from 'services/public' to 'public-services' to avoid conflict with services/{id} route
- Added field mapping from PascalCase (database) to camelCase (API response)
- Added explicit OPTIONS request handling for CORS preflight
- Updated frontend to use new /public-services endpoint
- Updated package.json main entry point to dist/src/index.js

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "schedula",
   "version": "1.0.0",
   "description": "Serverless Booking & Scheduling Backend on Azure",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
