Add visual calendar, availability API, and startup scripts
- Added visual calendar component with week view and time slot selection
- Created getAvailability API endpoint for real-time availability checking
- Enhanced service cards with modern card-based design
- Improved homepage with feature highlights and better UX
- Added start-all.sh and stop-all.sh scripts for easy startup
- Added setup scripts for database initialization
- Enhanced UI with animations and modern design elements

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "watch": "tsc -w",
     "prestart": "npm run build",
     "start": "func start",
+    "dev": "./start-all.sh",
+    "stop": "./stop-all.sh",
     "test": "jest",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"**/*.{ts,json,md}\""
