Clean up: Remove build artifacts and temporary setup files
- Remove frontend/.next build files (should be in .gitignore)
- Remove temporary setup scripts (add-test-data.js, fix-schema.js, setup-database.js)
- Consolidate documentation (keep QUICK_START.md, remove redundant docs)
- Update .gitignore to exclude Next.js build output

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,17 @@ local.settings.json
 .env.local
 .env.*.local
 
+# Next.js build output
+frontend/.next/
+frontend/out/
+
+# Temporary setup scripts (optional - remove if not needed)
+# add-test-data.js
+# fix-schema.js
+# setup-database.js
+
+# Log files
+/tmp/
+*.log
+
 
